Add Velopack integration for automatic updates
- Add ModelInfoUpdater.Updater standalone executable
  - Waits for Revit to close before applying updates
  - Uses GitHub Releases as update source
- Add VelopackUpdateService with GitHub Releases integration
- Add IUpdateService interface for update operations
- Add Inno Setup installer script for initial deployment
- Add Build-Release.ps1 PowerShell script for packaging
- Update App.cs and Command.cs with update notification flow
- Add velopack.json configuration file
- Update solution to include Updater project

--- a/src/ModelInfoUpdater.csproj
+++ b/src/ModelInfoUpdater.csproj
@@ -9,11 +9,12 @@
     <RootNamespace>ModelInfoUpdater</RootNamespace>
     <AssemblyName>ModelInfoUpdater</AssemblyName>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    
+    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
+
     <!-- Output to build-output folder -->
     <OutputPath>..\build-output\$(TargetFramework)\</OutputPath>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-    
+
     <!-- Revit Add-in specific settings -->
     <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
   </PropertyGroup>
@@ -58,6 +59,9 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="WindowsBase" />
     <Reference Include="System.Xaml" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Velopack" Version="0.0.1298" />
   </ItemGroup>
 
 </Project>
