Fix update notification by including Velopack dependencies in deployment

--- a/src/Updater/ModelInfoUpdater.Updater.csproj
+++ b/src/Updater/ModelInfoUpdater.Updater.csproj
@@ -79,6 +79,8 @@
     <ItemGroup>
       <Net8FilesToCopy Include="$(Net8SourceDir)ModelInfoUpdater.dll" />
       <Net8FilesToCopy Include="$(Net8SourceDir)ModelInfoUpdater.deps.json" />
+      <Net8FilesToCopy Include="$(Net8SourceDir)Velopack.dll" />
+      <Net8FilesToCopy Include="$(Net8SourceDir)NuGet.Versioning.dll" />
     </ItemGroup>
 
     <!-- Copy .NET Framework 4.8 files -->
